--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "bootstrap": "^4.6.0",
     "devicon": "^2.11.0",
     "imagekitio-react": "^1.0.9",
-    "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
@@ -40,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.54.8"
   }
 }
