--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "bootstrap": "^4.6.0",
     "devicon": "^2.11.0",
     "imagekitio-react": "^1.0.9",
-    "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.2",
     "react-tooltip": "^4.2.18",
+    "sass": "^1.54.9",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
