--- a/astro-client/package.json
+++ b/astro-client/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "astro-client",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/check": "^0.4.1",
-    "@astrojs/tailwind": "^5.1.0",
-    "@fontsource/open-sans": "^5.0.22",
-    "@fontsource/saira-extra-condensed": "^5.0.18",
-    "astro": "^4.1.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
-  }
+	"name": "astro-client",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "TAILWIND_MODE=watch astro dev",
+		"start": "astro dev",
+		"build": "astro check && astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/check": "^0.4.1",
+		"@astrojs/tailwind": "^5.1.0",
+		"@fontsource/open-sans": "^5.0.22",
+		"@fontsource/saira-extra-condensed": "^5.0.18",
+		"astro": "^4.1.2",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.3.3"
+	}
 }
